--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ djangorestframework-simplejwt>=5.3
 mysqlclient>=2.2
 bcrypt>=4.1
 django-cors-headers>=4.3
+cryptography==46.0.4
+drf-spectacular==0.29.0
